<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/fondo_nada">

    <TextView
            android:text="@string/valorDefecto"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/puntuacioMaxVictoria" android:textSize="18sp"
            android:textAlignment="center" android:layout_marginEnd="64dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/puntuacioVictoria"
            android:textColor="@android:color/background_dark"/>
    <TextView
            android:text="@string/maxPuntuación"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:id="@+id/txtMaxPunt" android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="328dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPuntuacion"
            android:textColor="@android:color/background_dark" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/puntuacioMaxVictoria" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/valorDefecto"
            android:layout_height="35dp"
            android:id="@+id/puntuacioVictoria" android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_width="wrap_content"
            android:textColor="@android:color/background_dark" android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/capturado"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:id="@+id/txtTitol" android:textSize="36sp"
            android:fontFamily="@font/shermlock" android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="@android:color/background_dark"/>
    <TextView
            android:text="@string/puntuacion"
            android:layout_width="182dp"
            android:layout_height="29dp"
            android:id="@+id/txtPuntuacion" android:textSize="24sp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/txtTitol"
            android:layout_marginStart="64dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/puntuacioVictoria"
            app:layout_constraintHorizontal_bias="0.715" android:textColor="@android:color/background_dark"/>
    <Button
            android:text="@string/btnRetry"
            android:layout_width="281dp"
            android:layout_height="46dp"
            android:id="@+id/btnRetryVictoria" android:fontFamily="@font/shermlock"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/btnSigLvlVictoria"
            android:background="@drawable/boton_vacio" app:layout_constraintHorizontal_bias="0.79"/>
    <Button
            android:text="@string/sigLvl"
            android:layout_width="281dp"
            android:layout_height="46dp"
            android:id="@+id/btnSigLvlVictoria" android:fontFamily="@font/shermlock"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMaxPunt"
            android:background="@drawable/boton_vacio" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.79"/>
    <Button
            android:text="@string/selLvl"
            android:layout_width="281dp"
            android:layout_height="46dp"
            android:id="@+id/btnSelLvlVictoria" android:fontFamily="@font/shermlock"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnRetryVictoria" android:background="@drawable/boton_vacio"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="0.79"/>
    <ImageView
            android:layout_width="179dp"
            android:layout_height="170dp" app:srcCompat="@drawable/gato_solo"
            android:id="@+id/LarryIzq"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtMaxPunt"
            app:layout_constraintEnd_toStartOf="@+id/btnRetryVictoria" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.02" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/gatovictoria"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="161dp" app:srcCompat="@drawable/bocadillo_izq"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/LarryIzq" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/bocadillo"/>
    <TextView
            android:text="@string/fraseVictoria"
            android:layout_width="208dp"
            android:layout_height="67dp"
            android:textColor="@android:color/black" android:textSize="18sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="48dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/LarryIzq" app:layout_constraintVertical_bias="0.615"/>
</android.support.constraint.ConstraintLayout>