<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/menu_sin_nada">
    <Button
            android:text="@string/stringNivel1"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:fontFamily="@font/shermlock"
            android:textSize="22sp"
            android:textColor="@color/gris"
            android:id="@+id/buttonSelLvl1"
            android:layout_marginTop="104dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="44dp"
            app:layout_constraintStart_toStartOf="parent" android:background="@drawable/queso_nivel"
            android:textAlignment="center"/>
    <Button
            android:text="@string/stringNivel2"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:fontFamily="@font/shermlock"
            android:textSize="22sp"
            android:textColor="@color/gris"
            android:id="@+id/buttonSelLvl2"
            android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonSelLvl3"
            app:layout_constraintStart_toEndOf="@+id/buttonSelLvl1" android:layout_marginStart="6dp"
            android:background="@drawable/queso_nivel"
            app:layout_constraintHorizontal_bias="0.609"
            android:layout_marginTop="104dp" app:layout_constraintTop_toTopOf="parent" android:textAlignment="center"/>
    <Button
            android:text="@string/stringNivel8"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:fontFamily="@font/shermlock"
            android:background="@drawable/queso_nivel"
            android:textSize="22sp"
            android:textColor="@color/gris"
            android:id="@+id/buttonSelLvl8"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSelLvl5" android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonSelLvl9"
            app:layout_constraintStart_toEndOf="@+id/buttonSelLvl7" android:layout_marginStart="6dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.483" app:layout_constraintVertical_bias="0.0"
            android:textAlignment="center"/>
    <Button
            android:text="@string/stringNivel9"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:fontFamily="@font/shermlock"
            android:background="@drawable/queso_nivel"
            android:textSize="22sp"
            android:textColor="@color/gris"
            android:id="@+id/buttonSelLvl9"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSelLvl6" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="44dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:textAlignment="center"/>
    <Button
            android:text="@string/stringNivel7"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:fontFamily="@font/shermlock"
            android:background="@drawable/queso_nivel"
            android:textSize="22sp"
            android:textColor="@color/gris"
            android:id="@+id/buttonSelLvl7"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSelLvl4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="44dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:textAlignment="center"/>
    <Button
            android:text="@string/stringNivel6"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:fontFamily="@font/shermlock"
            android:background="@drawable/queso_nivel"

            android:textSize="22sp"
            android:textColor="@color/gris"
            android:id="@+id/buttonSelLvl6"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSelLvl3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="44dp" android:textAlignment="center"/>
    <Button
            android:text="@string/stringNivel5"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:fontFamily="@font/shermlock"
            android:background="@drawable/queso_nivel"
            android:textSize="22sp"
            android:textColor="@color/gris"
            android:id="@+id/buttonSelLvl5"
            app:layout_constraintStart_toEndOf="@+id/buttonSelLvl4"
            android:layout_marginStart="6dp" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSelLvl2" android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonSelLvl6" app:layout_constraintHorizontal_bias="0.483"
            android:textAlignment="center"/>
    <Button
            android:text="@string/stringNivel4"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:fontFamily="@font/shermlock"
            android:background="@drawable/queso_nivel"
            android:textSize="22sp"
            android:textColor="@color/gris"
            android:id="@+id/buttonSelLvl4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/buttonSelLvl1"
            android:textAlignment="center"/>
    <Button
            android:text="@string/stringNivel3"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:fontFamily="@font/shermlock"
            android:background="@drawable/queso_nivel"
            android:textSize="22sp"
            android:textColor="@color/gris"
            android:id="@+id/buttonSelLvl3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="44dp"
            android:layout_marginTop="104dp" app:layout_constraintTop_toTopOf="parent" android:textAlignment="center"/>
    <TextView
            android:text="@string/stringInfoSelLvl"
            android:layout_width="225dp"
            android:layout_height="54dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="252dp"
            app:layout_constraintTop_toTopOf="parent" android:textColor="@android:color/background_dark"
            android:fontFamily="@font/shermlock"/>
</android.support.constraint.ConstraintLayout>