<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/fondo_nada">

    <Button
            android:text="@string/btnRetry"
            android:layout_width="281dp"
            android:layout_height="46dp"
            android:id="@+id/btnRetryDerrota"
            android:fontFamily="@font/shermlock"
            android:textSize="18sp"
            android:layout_marginStart="200dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/txtMaxPunt"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.586"
            android:background="@drawable/boton_vacio"
    />
    <TextView
            android:text="@string/valorDefecto"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/puntuacioDerrota" android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/background_dark" android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/puntuacion"
            android:layout_width="207dp"
            android:layout_height="34dp"
            android:id="@+id/txtPuntuacion2" android:textSize="24sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTitol" android:layout_marginStart="72dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/puntuacioDerrota" app:layout_constraintHorizontal_bias="0.812"
            android:textColor="@android:color/background_dark"/>
    <TextView
            android:text="@string/valorDefecto"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/puntuacioDerrota" android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/puntuacioMaxDerrota"
            android:textColor="@android:color/background_dark"/>
    <TextView
            android:text="@string/maxPuntuación"
            android:layout_width="211dp"
            android:layout_height="31dp"
            android:id="@+id/txtMaxPunt" android:textSize="24sp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPuntuacion2"
            android:layout_marginStart="72dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/puntuacioMaxDerrota"
            app:layout_constraintHorizontal_bias="0.813" android:textColor="@android:color/background_dark"/>
    <TextView
            android:text="@string/seHaEscapado"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:id="@+id/txtTitol" android:textSize="36sp"
            android:fontFamily="@font/shermlock" android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:textColor="@android:color/background_dark"/>
    <Button
            android:text="@string/selLvl"
            android:layout_width="281dp"
            android:layout_height="46dp"
            android:id="@+id/btnSelLvlDerrota"
            android:fontFamily="@font/shermlock"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnRetryDerrota"
            app:layout_constraintVertical_bias="0.151"
            android:background="@drawable/boton_vacio"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.769"/>
    <ImageView
            android:layout_width="165dp"
            android:layout_height="168dp" app:srcCompat="@drawable/raton_solo"
            android:id="@+id/larryizq"
            app:layout_constraintTop_toBottomOf="@+id/txtMaxPunt"
            app:layout_constraintEnd_toStartOf="@+id/btnRetryDerrota" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="84dp"
            android:layout_marginBottom="11dp" app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/ratonDerrota"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/bocadillo_izq"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTitol" android:contentDescription="@string/bocadillo"/>
    <TextView
            android:text="@string/fraseEscape"
            android:layout_width="192dp"
            android:layout_height="69dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/larryizq"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="60dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.515"/>
</android.support.constraint.ConstraintLayout>