<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/registro_sin_letra">

    <EditText
            android:hint="@string/name"
            android:layout_width="350dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_height="40dp"
            android:id="@+id/txtNom" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.524"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/txtRegister"
            android:textColor="@android:color/black" android:textSize="18sp" android:singleLine="false"
    />
    <EditText
            android:hint="@string/lastName"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:id="@+id/txtApellido" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNom" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.533"
            android:textColor="@android:color/black" android:textSize="18sp" />
    <TextView
            android:text="@string/registro"
            android:layout_width="wrap_content"
            android:layout_height="50dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="88dp" android:id="@+id/txtRegister" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="158dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="181dp"
            android:textSize="34sp" android:typeface="normal" android:textColor="@color/marron"
            android:fontFamily="@font/shermlock" app:layout_constraintHorizontal_bias="0.571"/>
    <EditText
            android:hint="@string/correo"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtCorreo" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/txtApellido" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="1dp"
            app:layout_constraintHorizontal_bias="0.533"
            android:textColor="@android:color/black"/>
    <EditText
            android:hint="@string/password"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtContraseña"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            android:textColor="@android:color/black" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCorreo"/>
    <Button
            android:text="@string/registrarse"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/btnRegistrarse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            android:textColor="@color/marron" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/txtContraseña" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:background="@drawable/boton_vacio" android:fontFamily="@font/shermlock"
            android:textSize="20sp"/>
</android.support.constraint.ConstraintLayout>