<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/menu_gato">

    <Button
            android:text="@string/btnJugar"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:id="@+id/btnJugar"
            android:background="@drawable/boton_naranja_vacio"
            android:fontFamily="@font/shermlock" android:textSize="28sp"
            android:layout_marginTop="114dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="260dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="221dp"/>
    <Button
            android:text="@string/btnEstadisticas"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:id="@+id/btnStats"
            android:background="@drawable/boton_vacio"
            android:fontFamily="@font/shermlock" android:textSize="20sp"
            android:textColor="@color/marron"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="287dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/btnJugar" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="244dp"/>
    <Button
            android:layout_width="200dp"
            android:layout_height="55dp"  android:id="@+id/btnConfig"
            android:background="@drawable/boton_vacio"
            android:text="@string/configuracion"
            android:fontFamily="@font/shermlock" android:textSize="20sp" android:textColor="@color/marron"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="287dp" android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/btnStats" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="244dp"/>
    <Button

            android:text="@string/LogOut"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:id="@+id/btnLogOut"
            android:fontFamily="@font/shermlock"
            android:background="@drawable/boton_vacio" android:textSize="20sp"
            android:textColor="@color/marron"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="287dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btnConfig"
            android:layout_marginBottom="27dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/imageView2"/>
    <ImageView
            android:layout_width="122dp"
            android:layout_height="233dp" app:srcCompat="@drawable/raton"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="112dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/btnJugar" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0" android:contentDescription="@string/ratonespaldas"/>
</android.support.constraint.ConstraintLayout>